# trends-monitoring

./: .gitignore  LICENSE  databutton.json  pyproject.toml
apps/: app.py
config/: config.py
functions/: reset_dataframes.py  scrape_twitter.py
notebooks/: notebook.ipynb
