[tool.poetry]
name = "trends-monitoring"
version = "0.1.0"
description = ""
authors = ["Øyvind Moldestad <moldestad@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
databutton = "^0.21.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
